<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@mipmap/background"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".PetunjukActivity">

    <TextView
        android:id="@+id/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        android:layout_marginBottom="50dp"
        android:text="@string/app_name"
        android:textSize="@dimen/textHead"
        android:textColor="@color/colorWhite"
        />
    <TextView
        android:id="@+id/Ket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Header"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:text="(Petunjuk Penggunaan)"
        android:textSize="@dimen/textDes"
        android:textColor="@color/colorWhite"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96"/>
    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="450dp"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintLeft_toRightOf="@id/guideline2"
        app:layout_constraintRight_toLeftOf="@id/guideline3"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp"
        app:cardBackgroundColor="@color/colorTrans">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@drawable/button_bg">
        <TextView
            android:id="@+id/no1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="5dp"
            android:text="1."
            android:textSize="@dimen/text16sp"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintLeft_toRightOf="@id/no1"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/petunjuk1"
            android:textSize="@dimen/text16sp"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:id="@+id/no2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text1"
            android:text="2."
            android:textSize="@dimen/text16sp"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintLeft_toRightOf="@id/no2"
            app:layout_constraintTop_toBottomOf="@id/text1"
            android:text="@string/petunjuk2"
            android:textSize="@dimen/text16sp"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/no3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text2"
            android:layout_marginTop="15dp"
            android:text="3."
            android:textSize="@dimen/text16sp"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/no3"
            app:layout_constraintTop_toBottomOf="@id/text2"
            android:layout_marginTop="15dp"
            android:text="@string/petunjuk3"
            android:textSize="@dimen/text16sp"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/no4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text3"
            android:layout_marginTop="15dp"
            android:text="4."
            android:textSize="@dimen/text16sp"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintLeft_toRightOf="@id/no4"
            app:layout_constraintTop_toBottomOf="@id/text3"
            android:text="@string/petunjuk4"
            android:textSize="@dimen/text16sp"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/no5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text4"
            android:layout_marginTop="15dp"
            android:text="5."
            android:textSize="@dimen/text16sp"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:id="@+id/text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintLeft_toRightOf="@id/no5"
            app:layout_constraintTop_toBottomOf="@id/text4"
            android:text="@string/petunjuk5"
            android:textSize="@dimen/text16sp"
            android:textColor="@color/colorWhite"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>